--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,7 @@ a, button {
     text-align: center;
     font-weight: 400;
     font-size: 20px;
+    padding-top: 6px;
 }
 .icon {
     position: relative;
@@ -204,7 +205,7 @@ a, button {
     background-image: url(../img/top.png);
 }
 .top {
-    left: 11% !important;
+    left: 39% !important;
 }
 .top i {
     margin: 0 45px;
