--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,7 @@ a, button {
   background-image: url(../img/imagenes.png);
 }
 .iconTonos{
-  background-image: url(../img/tonos.png);
+  background-image: url(../img/mistico.png);
 }
 .iconImagenes{
   background-image: url(../img/imagenes.png);
